--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100&family=Roboto:wght@100&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://yo4shi4to107.github.io/LoveLetter/style.css"/>
     <meta name="viewport" content="width=device-width,initial-scale=1">
 
   </head>
@@ -81,6 +81,6 @@
     <br><p>どうか千年先もどうか鳴り止まないで</p>
     <p>Ah　いつも本当にありがとう</p>
     </div>
-    <footer><a href="#">YOASOBI:ラブレター</a></footer>
+    <footer><a href="https://twitter.com/YOASOBI_staff/status/1421720353752031234?s=20">YOASOBI:ラブレター</a></footer>
   </body>
 </html>
