--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body>
     <div>
       <h1 class="head">ラブレター</h1>
-      <h2 class="head">作曲：Ayase/歌：ikura/作詞：はつね</h2><p></p>
+      <h2 class="head">作詞：はつね/作曲：Ayase/歌：ikura</h2><p></p>
       <audio
         controls
         src="ra.m4a">
