--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body>
     <div>
       <h1 class="head">ラブレター</h1>
-      <h2 class="head">作詞：はつね/作曲：Ayase/歌：ikura</h2><p></p>
+      <h2 class="head">原作お手紙：「音楽さんへ」(はつね 作)/作詞・作曲・編曲：Ayase/歌：ikura/Brass Arrangements：郷間幹男/Conductor：梅田隆司/Brass Band：大阪桐蔭高等学校 吹奏楽部</h2><p></p>
       <audio
         controls
         src="ra.m4a">
@@ -81,6 +81,6 @@
     <br><p>どうか千年先もどうか鳴り止まないで</p>
     <p>Ah　いつも本当にありがとう</p>
     </div>
-    <footer><a href="https://twitter.com/YOASOBI_staff/status/1421720353752031234?s=20">YOASOBI:ラブレター</a></footer>
+    <footer><a href="https://youtu.be/Wxy0fBsfh_0">YOASOBI:ラブレター</a></footer>
   </body>
 </html>
