--- a/index.html
+++ b/index.html
@@ -20,14 +20,10 @@
   <body>
     <div>
       <h1 class="head">ラブレター</h1>
-      <h2 class="head">原作お手紙：「音楽さんへ」(はつね 作)/作詞・作曲・編曲：Ayase/歌：ikura/Brass Arrangements：郷間幹男/Conductor：梅田隆司/Brass Band：大阪桐蔭高等学校 吹奏楽部</h2><p></p>
-      <audio
-        controls
-        src="ra.m4a">
-            Your browser does not support the
-            <code>audio</code> element.
-    </audio>
-    <p>初めまして大好きな音楽へ　</p>
+      <h2 class="head">原作お手紙：「音楽さんへ」(はつね 作)/作詞・作曲・編曲：Ayase/歌：ikura/Brass Arrangements：郷間幹男/Conductor：梅田隆司/Brass Band：大阪桐蔭高等学校 吹奏楽部</h2><p><br></p>
+      <iframe width="315" height="315" src="https://www.youtube.com/embed/Wxy0fBsfh_0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <p><br></p>
+      <p>初めまして大好きな音楽へ　</p>
     <p>ずっと考えてたこと</p>
     <p>どうか聞いて欲しくて　</p>
     <p>(伝えたいことがあるんです)</p>
@@ -81,6 +77,6 @@
     <br><p>どうか千年先もどうか鳴り止まないで</p>
     <p>Ah　いつも本当にありがとう</p>
     </div>
-    <footer><a href="https://youtu.be/Wxy0fBsfh_0">YOASOBI:ラブレター</a></footer>
+    <footer><a href="https://orcd.co/yoasobi_loveletter">YOASOBI:ラブレター</a></footer>
   </body>
 </html>
